--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -14,15 +14,11 @@ Il s'agit principalement d'un projet de visualisation, avec des cartes (dont cer
 
 ## Stations de vélos à Montpellier.
 
-<iframe src="./images/montpellier_bike_stations_map.html" width="100%" height="600"></iframe>
+<iframe src="../images/montpellier_bike_stations_map.html" width="100%" height="600"></iframe>
 
 ![](https://raw.githubusercontent.com/mscaia/PROJ_HAX712X/main/images/Figure_of_interest_.png){fig-align="center" width="80%"}
 
 ![](https://raw.githubusercontent.com/mscaia/PROJ_HAX712X/main/images/Nbr_trajet_par_jour.png){fig-align="center" width="80%"}
-
-## Test importation fichier HTML
-
-<iframe src="./images/graphique_distance_jour.html" width="100%" height="600"></iframe>
 
 ## Test Importation fichier Python
 
