--- a/docs/projet1.qmd
+++ b/docs/projet1.qmd
@@ -2,7 +2,7 @@
 title: Projet 1
 format: html
 execute:
-  enabled: true
+  enabled: false
 ---
 
 Ci-dessous, quelques éléments d'analyse des données.
@@ -110,20 +110,20 @@ for i in range(5):
     fig.show()
 ```
 
-<iframe src="./images/Nbr_trajet_par_jour_2021.html" width="100%" height="600"></iframe>
+<iframe src="../images/Nbr_trajet_par_jour_2021.png" width="100%" height="600"></iframe>
 
-<iframe src="./images/Nbr_trajet_par_jour_2022.html" width="100%" height="600"></iframe>
+<iframe src="../images/Nbr_trajet_par_jour_2022.png" width="100%" height="600"></iframe>
 
-<iframe src="./images/Nbr_trajet_par_jour_2023.html" width="100%" height="600"></iframe>
+<iframe src="../images/Nbr_trajet_par_jour_2023.png" width="100%" height="600"></iframe>
 
-<iframe src="./images/Nbr_trajet_par_jour_2024.html" width="100%" height="600"></iframe>
+<iframe src="../images/Nbr_trajet_par_jour_2024.png" width="100%" height="600"></iframe>
 
-<iframe src="./images/graphique_distance_jour_2021.html" width="100%" height="600"></iframe>
+<iframe src="../images/graphique_distance_jour_2021.html" width="100%" height="600"></iframe>
 
-<iframe src="./images/graphique_distance_jour_2022.html" width="100%" height="600"></iframe>
+<iframe src="../images/graphique_distance_jour_2022.html" width="100%" height="600"></iframe>
 
-<iframe src="./images/graphique_distance_jour_2023.html" width="100%" height="600"></iframe>
+<iframe src="../images/graphique_distance_jour_2023.html" width="100%" height="600"></iframe>
 
-<iframe src="./images/graphique_distance_jour_2024.html" width="100%" height="600"></iframe>
+<iframe src="../images/graphique_distance_jour_2024.html" width="100%" height="600"></iframe>
 
 Le graphique ci-dessus montre [...]
